2023-09-04  Andreas Scherer  <https://ascherer.github.io>

	* tangle.ch: Fix typo as in weave.web.

2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {tangle,dvicopy,dvitype,gftodvi,gftopk,gftype,mft,
	patgen,pktogf,pktype,pltotf,pooltype,tftopl,vftovp,
	vptovf,weave}.test:
	Make easier to test on Windows.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {mftraptest,triptest}.test:
	Filter Web2C year in banner.
	* {mftraptest,triptest,bibtex}.test,
	tests/{bibtex-{auxinclude,bibauth,mem},tex-closeout}.test:
	Make easier to test on Windows.
	* Makefile.in: Add tests {,e}uptexdir/wcfname0.test.

2023-08-19  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: CWEB 4.10 release.

2023-06-28  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Format 'common' with 'ctwill'.

2023-06-26  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Purge 'init_p'.

2023-06-21  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Match common.w with common.h.

2023-07-18  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Discard rest of overfull input line.

2023-07-17  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Deal with malign user input.

2023-07-09  Andreas Scherer  <https://ascherer.github.io>

	* cwebboot.cin: Regenerate boot source.

2023-06-20  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Changes in cwebdir/comm-w2c.h.

2023-06-18  Karl Berry  <karl@freefriends.org>

	* am/cweb.am (dist_bin_SCRIPTS): new script cwebdir/ctwill-proofsort.
	(TESTS): rearrange to keep all info for a given test together.

2023-06-17  Andreas Scherer  <https://ascherer.github.io>

	* Makefile.in: Integrate cwebdir/ctwill.test; run reautoconf.

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl:
	Skip tests for Shift_JIS & EUC-JP if conversion failed.
	Report from Ken Moffat.