@@ -4,6 +4,13 @@
 # Copyright 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
+W2CDir=${W2CDir:-..}
+ExeExt=${ExeExt:-}
+_etex=$W2CDir/etex$ExeExt
+_pltotf=$W2CDir/pltotf$ExeExt
+_tftopl=$W2CDir/tftopl$ExeExt
+_dvitype=$W2CDir/dvitype$ExeExt
+
 testdir=$abs_srcdir/triptrap
 etestdir=$abs_srcdir/etexdir/etrip
 
@@ -24,16 +31,16 @@ set -x
 
 echo "*** TRIP test for e-TeX in compatibility mode ***."
 
-../pltotf $testdir/trip.pl trip.tfm || exit 1
+$_pltotf $testdir/trip.pl trip.tfm || exit 1
 
-../tftopl ./trip.tfm trip.pl || exit 1
+$_tftopl ./trip.tfm trip.pl || exit 1
 
 diff $testdir/trip.pl trip.pl || is_OK=false
 
 # get same filename in log
 $LN_S $testdir/trip.tex .
 
-../etex --progname=einitex --ini <$testdir/trip1.in >ctripin.fot
+$_etex --progname=einitex --ini <$testdir/trip1.in >ctripin.fot
 if test ! -s trip.fmt; then
   echo "*** trip.fmt not created by trip1.in, investigate!" >&2
   exit 1
@@ -42,7 +49,7 @@ mv trip.log ctripin.log || exit 1
 diff $testdir/tripin.log ctripin.log
 
 # May as well test non-ini second time through.
-../etex --progname=etex <$testdir/trip2.in >ctrip.fot
+$_etex --progname=etex <$testdir/trip2.in >ctrip.fot
 mv trip.log ctrip.log
 diff $testdir/trip.fot ctrip.fot
 
@@ -53,7 +60,7 @@ $DIFF $DIFFFLAGS $testdir/trip.log ctrip.log
 mv tripos.tex ctripos.tex
 diff $testdir/tripos.tex ctripos.tex
 
-eval ../dvitype $dvitype_args trip.dvi >ctrip.typ || exit 1
+eval $_dvitype $dvitype_args trip.dvi >ctrip.typ || exit 1
 $DIFF $DIFFFLAGS $testdir/trip.typ ctrip.typ
 
 mv trip.fmt ctrip.fmt
@@ -62,7 +69,7 @@ mv trip.fmt ctrip.fmt
 
 echo "*** TRIP test for e-TeX in extended mode ***."
 
-../etex --progname=einitex --ini <$etestdir/etrip1.in >xtripin.fot
+$_etex --progname=einitex --ini <$etestdir/etrip1.in >xtripin.fot
 if test ! -s trip.fmt; then
   echo "*** trip.fmt not created by etrip1.in, investigate!" >&2
   exit 1
@@ -71,7 +78,7 @@ mv trip.log xtripin.log || exit 1
 diff ctripin.log xtripin.log
 
 # May as well test non-ini second time through.
-../etex --progname=etex <$etestdir/trip2.in >xtrip.fot
+$_etex --progname=etex <$etestdir/trip2.in >xtrip.fot
 mv trip.log xtrip.log
 diff ctrip.fot xtrip.fot
 
@@ -82,7 +89,7 @@ $DIFF $DIFFFLAGS ctrip.log xtrip.log
 mv tripos.tex xtripos.tex
 diff $testdir/tripos.tex xtripos.tex
 
-eval ../dvitype $dvitype_args trip.dvi >xtrip.typ || exit 1
+eval $_dvitype $dvitype_args trip.dvi >xtrip.typ || exit 1
 $DIFF $DIFFFLAGS ctrip.typ xtrip.typ
 
 mv trip.fmt xtrip.fmt
@@ -91,16 +98,16 @@ mv trip.fmt xtrip.fmt
 
 echo "*** e-TeX specific part of e-TRIP test ***."
 
-../pltotf $etestdir/etrip.pl etrip.tfm || exit 1
+$_pltotf $etestdir/etrip.pl etrip.tfm || exit 1
 
-../tftopl ./etrip.tfm etrip.pl || exit 1
+$_tftopl ./etrip.tfm etrip.pl || exit 1
 
 diff $etestdir/etrip.pl etrip.pl || is_OK=false
 
 # get same filename in log
 $LN_S $etestdir/etrip.tex .
 
-../etex --progname=einitex --ini <$etestdir/etrip2.in >etripin.fot
+$_etex --progname=einitex --ini <$etestdir/etrip2.in >etripin.fot
 if test ! -s etrip.fmt; then
   echo "*** etrip.fmt not created by etrip2.in, investigate!" >&2
   exit 1
@@ -109,7 +116,7 @@ mv etrip.log etripin.log || exit 1
 diff $etestdir/etripin.log etripin.log
 
 # May as well test non-ini second time through.
-../etex --progname=etex <$etestdir/etrip3.in >etrip.fot
+$_etex --progname=etex <$etestdir/etrip3.in >etrip.fot
 diff $etestdir/etrip.fot etrip.fot
 
 # We use $DIFF instead of `diff' only for those files where there
@@ -118,7 +125,7 @@ $DIFF $DIFFFLAGS $etestdir/etrip.log etrip.log
 
 diff $etestdir/etrip.out etrip.out
 
-eval ../dvitype $dvitype_args etrip.dvi >etrip.typ || exit 1
+eval $_dvitype $dvitype_args etrip.dvi >etrip.typ || exit 1
 $DIFF $DIFFFLAGS $etestdir/etrip.typ etrip.typ
 
 $is_OK || {
