@@ -4,6 +4,13 @@
 # Copyright 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
+W2CDir=${W2CDir:-..}
+ExeExt=${ExeExt:-}
+_tex=$W2CDir/tex$ExeExt
+_pltotf=$W2CDir/pltotf$ExeExt
+_tftopl=$W2CDir/tftopl$ExeExt
+_dvitype=$W2CDir/dvitype$ExeExt
+
 LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
 
 testdir=$abs_srcdir/triptrap
@@ -58,9 +65,9 @@ is_OK=:
 
 set -x
 
-../pltotf $testdir/trip.pl trip.tfm || exit 1
+$_pltotf $testdir/trip.pl trip.tfm || exit 1
 
-../tftopl ./trip.tfm trip.pl || exit 1
+$_tftopl ./trip.tfm trip.pl || exit 1
 
 diff $testdir/trip.pl trip.pl || is_OK=false
 
@@ -69,7 +76,7 @@ rm -f trip.tex
 $LN_S $testdir/trip.tex . || exit 1
 
 rm -f trip.fmt
-../tex --progname=initex --ini <$testdir/trip1.in >tripin.fot
+$_tex --progname=initex --ini <$testdir/trip1.in >tripin.fot
 if test ! -s trip.fmt; then
   echo "*** trip.fmt not created by trip1.in, investigate!" >&2
   exit 1
@@ -78,7 +85,7 @@ mv trip.log tripin.log || exit 1
 diff $testdir/tripin.log tripin.log
 
 # May as well test non-ini second time through.
-../tex --progname=tex <$testdir/trip2.in >trip.fot
+$_tex --progname=tex <$testdir/trip2.in >trip.fot
 diff $testdir/trip.fot trip.fot
 
 # We use $DIFF instead of `diff' only for those files where there
@@ -87,7 +94,7 @@ $DIFF $DIFFFLAGS $testdir/trip.log trip.log
 
 diff $testdir/tripos.tex tripos.tex || is_OK=false
 
-eval ../dvitype $dvitype_args trip.dvi >trip.typ || exit 1
+eval $_dvitype $dvitype_args trip.dvi >trip.typ || exit 1
 $DIFF $DIFFFLAGS $testdir/trip.typ trip.typ
 
 for f in tripin.log trip.fot trip.log trip.typ; do
