@@ -1,3 +1,8 @@
+2023-09-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* {mftraptest,triptest,twill}.test:
+	Make easier to test on Windows.
+
 2023-09-04  Andreas Scherer  <https://ascherer.github.io>
 
 	* tangle.ch: Fix typo as in weave.web.
